Crash with Laplacian Smooth (W - key in edit mode) #47081

Closed
opened 2015-12-29 17:10:43 +01:00 by Vuk Gardašević · 9 comments

System Information
Win 7 64 bit
Xubuntu 15.04
AMD Athlon II X3 455 R7 360

Blender Version
Broken:
Linux : version: 2.76 (sub 5), branch: master, commit date: 2015-12-28 23:33, hash: 6253815
Windows : 'ee2b583' and branch: master, commit date: 2015-12-28 23:33, hash: 6253815

Worked:
Windows : version: 2.76 (sub 2), branch: experimental-build, commit date: 2015-11-26 14:48, hash: 6d3fdcc
Linux : version 2.76 (sub 0), branch b'master', commit date b'2015-11-03' b'10:56', hash b'f337fea'

Short description of error

In Edit mode with the selected vertices on the mesh press 'W" to bring up the Specials menu and select Laplacian Smooth.

Exact steps for others to reproduce the error

After the Laplacian smooth option is selected from the Specials menu Blender CTD's.
Factory settings are loaded.
Running from console with the -d parameter gives the following output:

On Windows:
Error: EXCEPTION_INT_DIVIDE_BY_ZERO

On Linux:
Unhandled signal in divisionErrorHandler()
Aborted (core dumped)

File with the error.
test_laplacian_smooth.blend

**System Information** Win 7 64 bit Xubuntu 15.04 AMD Athlon II X3 455 R7 360 **Blender Version** Broken: Linux : version: 2.76 (sub 5), branch: master, commit date: 2015-12-28 23:33, hash: 6253815 Windows : 'ee2b583' and branch: master, commit date: 2015-12-28 23:33, hash: 6253815 Worked: Windows : version: 2.76 (sub 2), branch: experimental-build, commit date: 2015-11-26 14:48, hash: 6d3fdcc Linux : version 2.76 (sub 0), branch b'master', commit date b'2015-11-03' b'10:56', hash b'f337fea' **Short description of error** In Edit mode with the selected vertices on the mesh press 'W" to bring up the Specials menu and select Laplacian Smooth. **Exact steps for others to reproduce the error** After the Laplacian smooth option is selected from the Specials menu Blender CTD's. Factory settings are loaded. Running from console with the -d parameter gives the following output: On Windows: Error: EXCEPTION_INT_DIVIDE_BY_ZERO On Linux: Unhandled signal in divisionErrorHandler() Aborted (core dumped) File with the error. [test_laplacian_smooth.blend](https://archive.blender.org/developer/F270877/test_laplacian_smooth.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Hi, can verify, even with default cube, on:

Blender buildbot 6253815
Opensuse 13.2/64
CPU Intel #4200
4 GB Ram
GPU Intel GN 965

Tested with sofwaregl too.

Cheers, mib

Hi, can verify, even with default cube, on: Blender buildbot 6253815 Opensuse 13.2/64 CPU Intel #4200 4 GB Ram GPU Intel GN 965 Tested with sofwaregl too. Cheers, mib

Added subscriber: @Sergey

Added subscriber: @Sergey
Brecht Van Lommel was assigned by Sergey Sharybin 2015-12-30 10:36:30 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@brecht, is this caused by the solver changes you was doing?

@brecht, is this caused by the solver changes you was doing?

This issue was referenced by cf2005d942

This issue was referenced by cf2005d942ec7fd6dfffa96aaf74790ab7c5ee0c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47081
No description provided.