Fix T47081: laplacian smooth edit mode tool crash.